<resources>
    <string name="app_name">THR10_Controller</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bluetooth_scan_button">Bluetooth scan devices</string>
    <string name="main_panel">Main panel</string>
    <string name="compressor">Compressor</string>
    <string name="delay">Delay</string>
    <string name="effect">Effect</string>
    <string name="gate">Gate</string>
    <string name="reverb">Reverb</string>
    <string name="add_preset">Add preset</string>
    <string name="content_description_add_preset">Adds new settings preset</string>
    <string name="preset_rearrange_description">Drag and drop rearrange presets</string>
    <string name="no_preset">No preset</string>
    <string name="type_state">State</string>
    <string name="connection_error">Error connecting to device</string>
    <string name="preset_change_message">Preset changed: %1$s</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="preset_removed">Preset %1$s has been removed.</string>
    <string name="undo">Undo</string>
    <string name="new_preset_name">New preset name</string>
    <string name="output">Output</string>
    <string name="knee">Knee</string>
    <string name="ratio">Ratio</string>
    <string name="release">Release</string>
    <string name="attack">Attack</string>
    <string name="threshold">Threshold</string>
    <string name="state">State</string>
    <string name="time">Time</string>
    <string name="feedback">Feedback</string>
    <string name="high_cut">High cut</string>
    <string name="low_cut">Low cut</string>
    <string name="level">Level</string>
    <string name="speed">Speed</string>
    <string name="depth">Depth</string>
    <string name="mix">Mix</string>
    <string name="manual">Manual</string>
    <string name="spread">Spread</string>
    <string name="freq">Freq</string>
    <string name="amp_type">Amp type</string>
    <string name="gain">Gain</string>
    <string name="master">Master</string>
    <string name="bass">Bass</string>
    <string name="middle">Middle</string>
    <string name="treble">Treble</string>
    <string name="cabinet">Cabinet</string>
    <string name="pre_delay">Pre delay</string>
    <string name="high_ratio">High ratio</string>
    <string name="low_ratio">Low ratio</string>
    <string name="filter">Filter</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="select_device">Select device</string>

</resources>